{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 45,
  "lineage": "093ef65e-989e-4a68-e300-3d904e397920",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "private-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/8818225c-58f0-44de-a997-92f946312b3b/resourceGroups/example-resources/providers/Microsoft.Network/networkInterfaces/example-private-nic",
            "internal_domain_name_suffix": "g2pbx0wsx1yetajiy5pzybbbvf.lx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/8818225c-58f0-44de-a997-92f946312b3b/resourceGroups/example-resources/providers/Microsoft.Network/virtualNetworks/example-network/subnets/subnet2"
              }
            ],
            "location": "japaneast",
            "name": "example-private-nic",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "example-resources"
          },
          "dependencies": [
            "azurerm_subnet.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "public-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/8818225c-58f0-44de-a997-92f946312b3b/resourceGroups/example-resources/providers/Microsoft.Network/networkInterfaces/example-public-nic",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/8818225c-58f0-44de-a997-92f946312b3b/resourceGroups/example-resources/providers/Microsoft.Network/publicIPAddresses/myPublicIP",
                "subnet_id": "/subscriptions/8818225c-58f0-44de-a997-92f946312b3b/resourceGroups/example-resources/providers/Microsoft.Network/virtualNetworks/example-network/subnets/subnet1"
              }
            ],
            "location": "japaneast",
            "mac_address": "00-22-48-69-3A-08",
            "name": "example-public-nic",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "example-resources",
            "virtual_machine_id": "/subscriptions/8818225c-58f0-44de-a997-92f946312b3b/resourceGroups/example-resources/providers/Microsoft.Compute/virtualMachines/example-machine"
          },
          "dependencies": [
            "azurerm_public_ip.publicip",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "private_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8818225c-58f0-44de-a997-92f946312b3b/resourceGroups/example-resources/providers/Microsoft.Network/networkSecurityGroups/example-private-nsg",
            "location": "japaneast",
            "name": "example-private-nsg",
            "resource_group_name": "example-resources",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "public_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8818225c-58f0-44de-a997-92f946312b3b/resourceGroups/example-resources/providers/Microsoft.Network/networkSecurityGroups/example-public-nsg",
            "location": "japaneast",
            "name": "example-public-nsg",
            "resource_group_name": "example-resources",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "RDP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/8818225c-58f0-44de-a997-92f946312b3b/resourceGroups/example-resources/providers/Microsoft.Network/networkSecurityGroups/example-public-nsg/securityRules/HTTP",
            "name": "HTTP",
            "network_security_group_name": "example-public-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "example-resources",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.public_nsg",
            "azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3389",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/8818225c-58f0-44de-a997-92f946312b3b/resourceGroups/example-resources/providers/Microsoft.Network/networkSecurityGroups/example-public-nsg/securityRules/RDP",
            "name": "RDP",
            "network_security_group_name": "example-public-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "example-resources",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.public_nsg",
            "azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "publicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/8818225c-58f0-44de-a997-92f946312b3b/resourceGroups/example-resources/providers/Microsoft.Network/publicIPAddresses/myPublicIP",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "japaneast",
            "name": "myPublicIP",
            "resource_group_name": "example-resources",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/8818225c-58f0-44de-a997-92f946312b3b/resourceGroups/example-resources/providers/Microsoft.Network/virtualNetworks/example-network/subnets/subnet2",
            "name": "subnet2",
            "resource_group_name": "example-resources",
            "virtual_network_name": "example-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/8818225c-58f0-44de-a997-92f946312b3b/resourceGroups/example-resources/providers/Microsoft.Network/virtualNetworks/example-network/subnets/subnet1",
            "name": "subnet1",
            "resource_group_name": "example-resources",
            "virtual_network_name": "example-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "associate-private-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8818225c-58f0-44de-a997-92f946312b3b/resourceGroups/example-resources/providers/Microsoft.Network/virtualNetworks/example-network/subnets/subnet2",
            "network_security_group_id": "/subscriptions/8818225c-58f0-44de-a997-92f946312b3b/resourceGroups/example-resources/providers/Microsoft.Network/networkSecurityGroups/example-private-nsg",
            "subnet_id": "/subscriptions/8818225c-58f0-44de-a997-92f946312b3b/resourceGroups/example-resources/providers/Microsoft.Network/virtualNetworks/example-network/subnets/subnet2"
          },
          "dependencies": [
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "associate-public-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8818225c-58f0-44de-a997-92f946312b3b/resourceGroups/example-resources/providers/Microsoft.Network/virtualNetworks/example-network/subnets/subnet1",
            "network_security_group_id": "/subscriptions/8818225c-58f0-44de-a997-92f946312b3b/resourceGroups/example-resources/providers/Microsoft.Network/networkSecurityGroups/example-public-nsg",
            "subnet_id": "/subscriptions/8818225c-58f0-44de-a997-92f946312b3b/resourceGroups/example-resources/providers/Microsoft.Network/virtualNetworks/example-network/subnets/subnet1"
          },
          "dependencies": [
            "azurerm_network_security_group.public_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "ea1b1e37-bed2-49f0-8128-c7df9c0421ad",
            "id": "/subscriptions/8818225c-58f0-44de-a997-92f946312b3b/resourceGroups/example-resources/providers/Microsoft.Network/virtualNetworks/example-network",
            "location": "japaneast",
            "name": "example-network",
            "resource_group_name": "example-resources",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/24",
                "id": "/subscriptions/8818225c-58f0-44de-a997-92f946312b3b/resourceGroups/example-resources/providers/Microsoft.Network/virtualNetworks/example-network/subnets/subnet1",
                "name": "subnet1",
                "security_group": "/subscriptions/8818225c-58f0-44de-a997-92f946312b3b/resourceGroups/example-resources/providers/Microsoft.Network/networkSecurityGroups/example-public-nsg"
              },
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/8818225c-58f0-44de-a997-92f946312b3b/resourceGroups/example-resources/providers/Microsoft.Network/virtualNetworks/example-network/subnets/subnet2",
                "name": "subnet2",
                "security_group": "/subscriptions/8818225c-58f0-44de-a997-92f946312b3b/resourceGroups/example-resources/providers/Microsoft.Network/networkSecurityGroups/example-private-nsg"
              }
            ]
          }
        }
      ]
    }
  ]
}